[gd_scene load_steps=10 format=2]

[ext_resource path="res://Shaders/PalSwap4.shader" type="Shader" id=1]
[ext_resource path="res://Assets/Graphics/Shattered.png" type="Texture" id=2]
[ext_resource path="res://Objects/TheShattered/TheShattered.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=6]
radius = 16.0
height = 64.0

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/pal_col_1 = Color( 0.6992, 0.6992, 0.6992, 1 )
shader_param/pal_col_2 = Color( 0.6, 0.6, 0.6, 1 )
shader_param/pal_col_3 = Color( 0.8, 0.8, 0.8, 1 )
shader_param/pal_col_4 = Color( 0, 0, 0, 1 )
shader_param/replace_col_1 = Color( 0.6992, 0.6992, 0.6992, 1 )
shader_param/replace_col_2 = Color( 0.6, 0.6, 0.6, 1 )
shader_param/replace_col_3 = Color( 0.8, 0.8, 0.8, 1 )
shader_param/replace_col_4 = Color( 0, 0, 0, 1 )
shader_param/precision = 0.1
shader_param/alpha = 1.0

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/pal_col_1 = Color( 0.6992, 0.6992, 0.6992, 1 )
shader_param/pal_col_2 = Color( 0.6, 0.6, 0.6, 1 )
shader_param/pal_col_3 = Color( 0.8, 0.8, 0.8, 1 )
shader_param/pal_col_4 = Color( 0, 0, 0, 1 )
shader_param/replace_col_1 = Color( 0.6992, 0.6992, 0.6992, 1 )
shader_param/replace_col_2 = Color( 0.6, 0.6, 0.6, 1 )
shader_param/replace_col_3 = Color( 0.8, 0.8, 0.8, 1 )
shader_param/replace_col_4 = Color( 0, 0, 0, 1 )
shader_param/precision = 0.1
shader_param/alpha = 1.0

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/pal_col_1 = Color( 0.6992, 0.6992, 0.6992, 1 )
shader_param/pal_col_2 = Color( 0.6, 0.6, 0.6, 1 )
shader_param/pal_col_3 = Color( 0.8, 0.8, 0.8, 1 )
shader_param/pal_col_4 = Color( 0, 0, 0, 1 )
shader_param/replace_col_1 = Color( 0.6992, 0.6992, 0.6992, 1 )
shader_param/replace_col_2 = Color( 0.6, 0.6, 0.6, 1 )
shader_param/replace_col_3 = Color( 0.8, 0.8, 0.8, 1 )
shader_param/replace_col_4 = Color( 0, 0, 0, 1 )
shader_param/precision = 0.1
shader_param/alpha = 1.0

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/pal_col_1 = Color( 0.6992, 0.6992, 0.6992, 1 )
shader_param/pal_col_2 = Color( 0.6, 0.6, 0.6, 1 )
shader_param/pal_col_3 = Color( 0.8, 0.8, 0.8, 1 )
shader_param/pal_col_4 = Color( 0, 0, 0, 1 )
shader_param/replace_col_1 = Color( 0.6992, 0.6992, 0.6992, 1 )
shader_param/replace_col_2 = Color( 0.6, 0.6, 0.6, 1 )
shader_param/replace_col_3 = Color( 0.8, 0.8, 0.8, 1 )
shader_param/replace_col_4 = Color( 0, 0, 0, 1 )
shader_param/precision = 0.1
shader_param/alpha = 1.0

[sub_resource type="CircleShape2D" id=5]
radius = 128.0

[node name="TheShattered" type="StaticBody2D"]
collision_layer = 2
collision_mask = 32
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="Base" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -64 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="Body" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 0, -89 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 32, 0, 32, 32 )

[node name="RightEye" type="Sprite" parent="."]
material = SubResource( 3 )
position = Vector2( 77.875, -97.829 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 64, 0, 32, 32 )

[node name="LeftEye" type="Sprite" parent="."]
material = SubResource( 4 )
position = Vector2( -81.659, -85.636 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 96, 0, 32, 32 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -32 )
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
